| Summary: | ASTERISK-29668: ari: Listing bridges fails when dialing bridge exists | ||
| Reporter: | Joshua C. Colp (jcolp) | Labels: | |
| Date Opened: | 2021-09-23 09:11:09 | Date Closed: | 2021-09-24 09:40:26 |
| Priority: | Major | Regression? | No |
| Status: | Closed/Complete | Components: | Resources/res_ari_bridges |
| Versions: | 18.6.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | When the create and dial functionality is used in ARI an invisible/hidden "dial bridge" is created that the channel is part of. This is an implementation detail and is not exposed internally. Unfortunately when listing bridges this bridge is also in the list, but provides no snapshot. This causes the list operation to fail. | ||
| Comments: | By: Friendly Automation (friendly-automation) 2021-09-24 09:40:29.478-0500 Change 16500 merged by Friendly Automation: ari: Ignore invisible bridges when listing bridges. [https://gerrit.asterisk.org/c/asterisk/+/16500|https://gerrit.asterisk.org/c/asterisk/+/16500] By: Friendly Automation (friendly-automation) 2021-09-24 10:59:17.576-0500 Change 16541 merged by Kevin Harwell: ari: Ignore invisible bridges when listing bridges. [https://gerrit.asterisk.org/c/asterisk/+/16541|https://gerrit.asterisk.org/c/asterisk/+/16541] By: Friendly Automation (friendly-automation) 2021-09-24 11:00:10.106-0500 Change 16542 merged by Kevin Harwell: ari: Ignore invisible bridges when listing bridges. [https://gerrit.asterisk.org/c/asterisk/+/16542|https://gerrit.asterisk.org/c/asterisk/+/16542] | ||